# agentcodehandoff

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: pull_request_template.md  release-v0.1.0-alpha.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: demo-session.sh  first-5-minutes.md  local-squad-recovery.md  local-squad-workflow.md  public-followup-posts.md  recovery.md  second-agent-ops-workflow.md  supervised-bridge-workflow.md
scripts/: agentcodehandoff-auto-status  agentcodehandoff-bridge-status  agentcodehandoff-claude-auto  agentcodehandoff-claude-blocked  agentcodehandoff-claude-claim  agentcodehandoff-claude-done  agentcodehandoff-claude-read  agentcodehandoff-claude-release  agentcodehandoff-claude-request  agentcodehandoff-claude-review  agentcodehandoff-claude-send  agentcodehandoff-claude-watch  agentcodehandoff-codex-auto  agentcodehandoff-codex-blocked  agentcodehandoff-codex-claim  agentcodehandoff-codex-done  agentcodehandoff-codex-read  agentcodehandoff-codex-release  agentcodehandoff-codex-request  agentcodehandoff-codex-review  agentcodehandoff-codex-send  agentcodehandoff-codex-watch  agentcodehandoff-dashboard  agentcodehandoff-drift  agentcodehandoff-events  agentcodehandoff-hermes-auto  agentcodehandoff-hermes-blocked  agentcodehandoff-hermes-claim  agentcodehandoff-hermes-done  agentcodehandoff-hermes-read  agentcodehandoff-hermes-release  agentcodehandoff-hermes-request  agentcodehandoff-hermes-review  agentcodehandoff-hermes-send  agentcodehandoff-hermes-watch  agentcodehandoff-openclaw-auto  agentcodehandoff-openclaw-blocked  agentcodehandoff-openclaw-claim  agentcodehandoff-openclaw-done  agentcodehandoff-openclaw-read  (+23 more)
src/agentcodehandoff/: cli.py
src/agents_inbox/: cli.py
tests/: test_cli.py
