[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-inbox"
version = "0.1.0"
description = "Terminal-first collaboration for coding agents through a shared inbox, handoff stream, and claim board."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "iris" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/iriseye931-ai/agents-inbox"
Repository = "https://github.com/iriseye931-ai/agents-inbox"

[project.scripts]
agents-inbox = "agents_inbox.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
