[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcodehandoff"
version = "0.1.0"
description = "Local-first control plane for coding agents with handoffs, supervision, routing, and recovery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "iris" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/iriseye931-ai/agentcodehandoff"
Repository = "https://github.com/iriseye931-ai/agentcodehandoff"

[project.scripts]
agentcodehandoff = "agentcodehandoff.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
